--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ $(function(){
 				<td><strong>rippleClass</strong></td><td>Allows you to change the class of the appended ripple effect.</td>
 			</tr>
 		</table>
+
+		<h3>Download</h3>
+		<p>You can download the project from <a href="https://github.com/dominikbiedebach/MaterialRipple">Github</a> - <a href="https://github.com/dominikbiedebach/MaterialRipple/archive/master.zip">ZIP-Download</a></p>
 	</div>
 
 	<div class="floating-wrapper">
